# cva6

./: CMakeLists.txt  Makefile  README.md  make_fpga.sh
.github/workflows/: ci.yml
core/: Flist.cva6  branch_unit.sv  csr_regfile.sv  cva6.sv  ex_stage.sv  issue_read_operands.sv  load_store_unit.sv  perf_counters.sv
core/cva6_mmu/: cva6_mmu.sv
core/frontend/: bht.sv  btb.sv  frontend.sv  ftq.sv  ftq_without_c.sv  gbp.sv  instr_queue.sv  lbp.sv  lfsr.sv  mbp.sv  tage.sv  tage_component.sv  tage_lfsr.sv  tournament.sv
core/include/: ariane_pkg.sv  build_config_pkg.sv  config_pkg.sv  cv32a60x_config_pkg.sv  cv32a65x_config_pkg.sv  cv64a6_imafdc_sv39_config_pkg.sv  riscv_pkg.sv  rvfi_types.svh
corev_apu/fpga/: Makefile  sourceme.sh
corev_apu/fpga/scripts/: run_bht.tcl  run_gbp.tcl  run_lbp.tcl  run_tage.tcl  run_tournament.tcl
corev_apu/fpga/src/: ariane_xilinx.sv
corev_apu/tb/: ariane_tb.cpp  gen_gbp_inputs.py  read_json.cpp
corev_apu/tb/common_bpred_verif/: abstract_instruction.svh  backward_branch_instruction.svh  branch_instruction.svh  exit_instruction.svh  forward_branch_instruction.svh  instr_stream.svh  instruction.svh  normal_instruction.svh
corev_apu/tb/tb_bht/: tb.list
corev_apu/tb/tb_bht_v2/: Makefile  tb.list
corev_apu/tb/tb_cva6_icache/: tb.list
corev_apu/tb/tb_gbp/: bht_sim.do  (+1 more)
stats_bp/: create_avg_group_bars.py  create_bar_groups.py  create_graphs.py  create_tables.py  create_tables.sh
stats_bp_gem5/: create_tables.sh
stats_bp_old/: create_tables.sh
verif/regress/: smoke-tests-cv32a65x.sh  smoke-tests-cv64a6_imafdc_sv39.sh
(+111 files in other folders)
